# CMakeCourse

./: CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake
configured/: config.hpp.in
docs/html/: dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
docs/html/search/: all_0.js  all_1.js  searchdata.js
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CmakeLists.txt
